@@ -2,6 +2,7 @@ Revision history for Perl module Protocol::DBus
 
 0.17
 - BUG FIX: Fix errant remove() in Mojo.pm DESTROY handler.
+- BUG FIX: Fix nonblocking mode on pre-5.14 perls.
 - Make event loops defer polling until at least one initialize() has run.
 - Increase event loop test coverage.
 - Work around a Devel::Cover bug
